tests/NormalTests/paczka1/small_fuzzy/78896386.err
Error in line 7: S172 A452 41,3
Error in line 14: uLLG2 A699 39,7
